# fastmcp-bloomreach

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FastMCP-Bloomreach-Engagement.docx  README.md  analyses.example.json  cloudbuild.yaml  pyproject.toml
.github/workflows/: release-please.yml
src/bloomreach/: __init__.py  analyses_config.py  client.py  server.py
src/bloomreach/resources/: analyses.py
src/bloomreach/tools/: analyses_config.py  analytics.py  catalogs.py  consent.py  customer.py  email_metrics.py  scenarios.py
