[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-bloomreach"
version = "0.1.0"
description = "FastMCP server for the Bloomreach Engagement and Discovery APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
bloomreach-mcp = "bloomreach.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bloomreach"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
